--- a/Quiver Quantitative.html
+++ b/Quiver Quantitative.html
@@ -12,10 +12,17 @@ body {
 }
 
 h1 {
-    font-family: "Arial";
+    font-family: "simplifica";
     font-weight: lighter;
-    font-size: 20px
+    font-size: 20px;
+    letter-spacing: 2px;
 }
+
+@font-face {
+  font-family: 'simplifica';
+  src: url('simplifica.woff') format('woff'), /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+   url('simplifica.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
+}  
 .redText {
     color: rgb(184,106,106)
 }
