--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@ h1 {
 
 }
 
+form {
+margin-top:75px;
+}
+
 .flex {
   display: flex;
   justify-content: left;
@@ -133,7 +137,7 @@ input {
     height:30px;
     margin-right: 70px;
     border-radius: 6px;
-
+    margin-bottom: 15px;
 }
 
 .snap-container {  
@@ -166,13 +170,17 @@ a {
 </div>
 <div class="container">
 <img src="{% static '/images/mockup.png' %}"  class = "block1" style="margin-right: auto; margin-left: auto;max-width: 75%">
-<input placeholder="First Name" class="block2" type="name"required autocomplete="off"/>
-<input placeholder="Last Name" class = "block3" type="name"required autocomplete="off"/>
-  <input placeholder="Email Address" class = "block4" type="email"required autocomplete="off"/>
-  <input placeholder="Password" class = "block5" type="password"required autocomplete="off"/>
-
-    <button class="block6 button">SIGN UP</button>
-    </div>
+<form action="/register/" method="post">
+    {% csrf_token %}
+    <input autofocus id="id_username" maxlength="150" name="username" required type="text" placeholder="username">
+    <input type="password" name="password1" required id="id_password1" placeholder="password">
+    <input type="password" name="password2" required id="id_password2" placeholder="confirm password">
+    <button type="submit" class="button">SIGN UP</button>
+{% if error == "TRUE" %}
+<h1 class="redText" style="font-size:10px;margin-top:20px; width:250px">ERROR: INVALID USERNAME OR PASSWORD</h1>
+{% endif %}
+</form>    
+</div>
 <div style="margin-left: 40px; text-align: center">
 <h1 class="redText" style="top: 0px; font-size:30px;margin-top:75px;margin-bottom:20px;text-align:left">unlock the power of big data with</h1>
 <h1 class="tealText" style="top: 0px;margin-top:1px;color:white;text-align: left">THE <span style="color:rgb(85,179,175)">NEXT GENERATION</span> OF INVESTMENT ANALYSIS TOOLS</h1>
