--- a/tickerView.html
+++ b/tickerView.html
@@ -216,6 +216,10 @@ td{
 {% endfor %}
 </div>
 {% endif %}
+<h1 class="tealMetrics" style="color:rgb(133,180,255)">MAUDE Reports{{maudeName}}</h1>
+{% for info in maude %}
+<h1 class="tealMetrics">{{info}}</h1>
+{% endfor %}
 {% if glassdoor|length > 0 %}
 <div style="float:right; margin-top: 15px;width:50%">
 <h1 class="tealMetrics" style="color:rgb(133,180,255)">Glassdoor</h1>
@@ -253,7 +257,7 @@ td{
       {% endfor %}
  </tbody>
       </table>
-<button type="button" style="border-width:0px" class="button buttonQuarterly">Switch to Quarterly</button>
+<button type="button" style="border-width:0px" class="button buttonQuarterly" id = "quarterlyButton">Switch to Quarterly</button>
 <button type="button" style="border-width:0px" class="button buttonGlassdoor" id ="expandButton">Expand</button>
 </div>
 {% endif %}
@@ -267,9 +271,37 @@ td{
 {% endfor %}
 </div>
 {% endif %}
-{% if webTraffic|length > 0 %}
+
+{% if traffic|length > 0 %}
 <div style="margin-top: 15px;width:50%;float:right">
 <h1 class="tealMetrics" style="color:rgb(133,180,255)">Web Traffic</h1>
+<h1 class="tealMetrics" style="color:gray">Company's website traffic ranking</h1>  
+<table class="pure-table pure-table-horizontal" style="margin-left:auto;margin-right:40px">
+    <tbody>
+<tr>
+        <th style = "text-align:right;">Month</th>
+        <th style = "text-align:right;">Rank</th>
+      </tr>
+      {% for info in traffic %}
+      {% if info.0.year > 2018 and info.0.month > 9 %}
+      <tr class="hiddenQuarterly2">
+        <td style="text-align:right;color: rgb(85,179,175);">{{info.0.month}}/{{info.0.year}}</td>
+        <td style="text-align:center;color: rgb(85,179,175);">{{info.1}}</td>
+      </tr>
+      {% endif %}
+      {% endfor %}
+      {% for info in traffic %}
+      {% if info.0.year < 2019 or info.0.month < 10 %}
+      
+	<tr class="hiddenTraffic" style="display:none"> <td style="text-align:right;color: rgb(85,179,175);">{{info.0.month}}/{{info.0.year}}</td>
+<td style="text-align:center;color: rgb(85,179,175);">{{info.1}}</td>
+</tr>
+      {% endif %}
+      {% endfor %}
+ </tbody>
+      </table>
+<button type="button" style="border-width:0px" class="button buttonTraffic" id ="expandButton2">Expand</button>
+</div>
 </div>
 {% endif %}
 </div>
@@ -294,7 +326,6 @@ for (i = 0; i < quar.length; i++) {
    } else {
     document.getElementById("period").innerHTML = "Month"
    }
-
     this.classList.toggle("active");
     var hidden = document.getElementsByClassName("hiddenQuarterly")
     for (j = 0; j < hidden.length; j++) {
@@ -304,27 +335,45 @@ for (i = 0; i < quar.length; i++) {
 		hidden[j].style.display = "none";
 	}    
 }
-var hidden = document.getElementsByClassName("hiddenGlassdoor")
+});
+}
+
+
+var coll = document.getElementsByClassName("buttonGlassdoor"); 
+var quarterlyButton = document.getElementById("quarterlyButton");
+var i; 
+for (i = 0; i < coll.length; i++) {
+  coll[i].addEventListener("click", function() {
+	if(this.innerHTML == "Expand") {
+		this.innerHTML = "Hide"
+		quarterlyButton.innerHTML = ""
+	} else {
+		this.innerHTML = "Expand"
+		quarterlyButton.innerHTML = "Switch to Quarterly"
+	}
+    this.classList.toggle("active");
+    var hidden = document.getElementsByClassName("hiddenGlassdoor")
     for (j = 0; j < hidden.length; j++) {
-		hidden[j].style.display = "none";  
+	if(hidden[j].style.display == "none") {
+        hidden[j].style.display =  "table-row";
+	} else {
+		hidden[j].style.display = "none";
+	}    
 }
   });
 }
 
-
-
-
-var coll = document.getElementsByClassName("buttonGlassdoor"); 
+var coll2 = document.getElementsByClassName("buttonTraffic"); 
 var i; 
-for (i = 0; i < coll.length; i++) {
-  coll[i].addEventListener("click", function() {
+for (i = 0; i < coll2.length; i++) {
+  coll2[i].addEventListener("click", function() {
 	if(this.innerHTML == "Expand") {
 		this.innerHTML = "Hide"
 	} else {
 		this.innerHTML = "Expand"
 	}
     this.classList.toggle("active");
-    var hidden = document.getElementsByClassName("hiddenGlassdoor")
+    var hidden = document.getElementsByClassName("hiddenTraffic")
     for (j = 0; j < hidden.length; j++) {
 	if(hidden[j].style.display == "none") {
         hidden[j].style.display =  "table-row";
