--- a/index.html
+++ b/index.html
@@ -1,14 +1,59 @@
-<html>
-
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#">
 <style>
 {% load static %}
-
+{% load humanize %}
 html {
+	margin:0;
+	padding:0;
 	overflow-y: scroll; 
 }
 
+
+.dropdown{
+	padding-left:10px;
+	padding-right:10px;
+	float:right;
+	margin-right:20px;
+	margin-left:20px;
+}
+
 body {
+    margin:0;
+    padding:0;
     background-color: rgb(31,36,45)
+}
+
+.dropdown-text {
+	font-size:15px;
+	padding-left:10px;
+	padding-right:10px;
+}
+
+.dropdown-content {
+	display: none;
+	position: absolute;
+	background-color: rgb(31,36,45);
+	min-width: 160px;
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+	display: block;
+}
+
+.dropbtn {
+	background-color: #4CAF50;
+	color: white;
+	padding: 16px;
+	font-size: 16px;
+	border: none;
+	cursor: pointer;
+}
+
+
+.shadowDiv {
+box-shadow:0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
 .grid-container {
@@ -41,10 +86,10 @@ body {
 }
 
 h1 {
-    font-family: "simplifica";
-    font-weight: bold;
-    font-size: 40px;
-    letter-spacing: 5px;
+    font-family: avenir next;
+    font-weight: 700;
+    font-size: 35px;
+    letter-spacing: 3px;
 }
 
 @font-face {
@@ -61,24 +106,27 @@ h1 {
 .tealText {
     position:relative;
     top:-10px;
-    color: rgb(85,179,175);
+    color: #40c4ff;
 }
 
 .button {
-    color: rgb(184,223,221);
-    background-color: transparent;
+    color: #D33F49;
+    background-color: rgb(31,36,45);
     border: 1px solid black;
+    border-radius: 6px;
     display: inline-block;
     align-items: center;
-    border-color: rgb(184,223,221);
-    width: 200px;
+    border-color: rgb(31,36,45);
+    width: 80%;
     height:45px;
     margin-top:10px;
-    margin-right: 70px;
-
-
+    box-shadow:0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
+.button:hover {
+	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+
+}
 form {
 margin-top:75px;
 }
@@ -98,14 +146,14 @@ margin-top:75px;
 }
 
 .menuItem{
-    font-size: 23px;
+    font-size: 18px;
     display: block;
     width: auto;
     max-height: 50%;
     height:auto;
     display: inline-block;
     align-items: center;
-    top: 4px;
+    top: 10px;
 }
 
 .container {
@@ -113,12 +161,13 @@ margin-top:75px;
   margin-top: 30px;
   justify-content: space-evenly;
   height:50%;
-  grid-template-columns: 60% 1% 35%;
+  grid-template-columns: 60% 36%;
   grid-template-rows: 40px 50px 50px 50px 50px 50px 50px;
+ // box-shadow:0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
 .block1 {
-  grid-row: 1 / 3;
+  grid-row: 1 / 7;
   grid-column: 1 / 1;
 }
 
@@ -153,13 +202,13 @@ input {
     border: 1px solid black;
     display: inline-block;
     align-items: center;
-    padding-left: 10px;
-    border-color: gray;
-    width: 200px;
+    padding-left: 2%;
+    border-color: rgb(145,168,161);
+    width: 80%;
     height:30px;
-    margin-right: 70px;
     border-radius: 6px;
     margin-bottom: 15px;
+    float:right;
 }
 
 .snap-container {  
@@ -173,68 +222,156 @@ input {
 
 a {
   text-decoration: none;
-  color: rgb(85,179,175);
+  color: #40c4ff;
+}
+
+.dropdownLink {
+	color:white;
+}
+@media only screen and (max-device-width: 800px) {
+	.show-mobile {
+		display:block;
+	}
+	.hide-mobile {
+		display:none;
+	}
+}
+
+@media only screen and (min-device-width: 801px) {
+	.show-mobile {
+		display:none;
+	}
+	.hide-mobile {
+		display:block;
+	}
+
+	
 }
 
 
 
 
+</style> 
+<head> <!-- <meta name="viewport" 
+content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"> 
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> <meta 
+name="HandheldFriendly" content="true"> --> <title>Quiver Quantitative</title> 
+<!-- <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}"> --> 
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-158102121-1"></script> 
 
+<script> window.dataLayer = window.dataLayer || []; function 
+gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 
+'UA-158102121-1'); </script> 
 
-</style>
-
+<meta property="og:image:url" content="http://www.quiverquant.com/static/images/laptop-ipad-glassdoor.png" />
+<meta property="og:description" content="Unlock the Power of Big Data with the Next Generation of Investment Analysis Tools"/>
+<meta property="og:title" content="Quiver Quantitative"/>
+</head>
 <div style="height:100%; width:100%">
 <div>
-<div class = "snap-point flex" style="text-align:left"><img src="/static/images/logo.png"  class = "center flex-item" style="margin-bottom:25px;height:60px;max-width: 75%">
-<h1 class="flex-item tealText menuItem"><a href="#altData">ALTERNATIVE DATA</a></h1>
-<h1 class="flex-item tealText menuItem"><a href="#consulting">CONSULTING</a></h1>
+<div class = "snap-point flex" style="text-align:left"><img src="/static/images/logo.png"  class = "center flex-item" style="height:60px;max-width: 75%">
+
+<!-- <div class="dropdown" style="margin-left:auto">
+<h1 class="flex-item tealText menuItem">PRODUCTS</h1>
+<div class="dropdown-content">
+<h1 class="dropdown-text"><a class="dropdownLink" href="#altData">ALTERNATIVE DATA</a></h1>
+<h1 class="dropdown-text"><a class="dropdownLink" href="#consulting">CONSULTING</a></h1>
+</div>
+</div> -->
+
+<div class="dropdown" style="margin-left:auto">
+<h1 class="flex-item tealText menuItem">RESOURCES</h1>
+<div class="dropdown-content">
+<h1 class="dropdown-text"><a class="dropdownLink" href="/blog">BLOG</a></h1>
+<h1 class="dropdown-text"><a class="dropdownLink" href="/aboutus">ABOUT US</a></h1>
+</div>
+</div>
+<div class="dropdown" style="margin-right:40px">
 <h1 class="flex-item tealText menuItem"><a href="/login">LOG IN</a></h1>
 </div>
-<div class="container">
-<img src="/static/images/mockup.png"  class = "block1" style="margin-right: auto; margin-left: auto;max-width: 75%">
-<form action="/register/" method="post">
+</div>
+<div class="container" style="background-color:rgba(94,147,255,.0);height:320px;margin-bottom:65px">
+<img src="/static/images/laptop-ipad-twitter.png"  class = "block1" style="max-height:100%;margin-top:22px;margin-right: auto; margin-left: auto;max-width:80%">
+<form action="/register/" method="post" style="margin-right:30%;margin-top:50px">
     {% csrf_token %}
+ {% if error == "TRUE" %} 
+<h1 class="redText" style="text-align:right;font-size:13px;">{{form.errors.username.0}}</h1>
+<h1 class="redText" style="text-align:right;font-size:13px;">{{form.errors.password.0}}</h1>
+<h1 class="redText" style="text-align:right;font-size:13px;">{{form.errors.password2.0}}</h1>
+<h1 class="redText" style="text-align:right;font-size:13px;">{{form.errors.email.0}}</h1>
+{% endif %}
     <input autofocus id="id_username" maxlength="150" name="username" required type="text" placeholder="username">
+    <input type="email" name="email" required id="email" placeholder="email">
     <input type="password" name="password1" required id="id_password1" placeholder="password">
     <input type="password" name="password2" required id="id_password2" placeholder="confirm password">
-    <button type="submit" class="button">SIGN UP</button>
- {% if error == "TRUE" %} 
-<h1 class="redText" style="font-size:10px;margin-top:20px; width:250px">ERROR: INVALID USERNAME OR PASSWORD</h1>
-{% endif %}
-
-
-
+    <button type="submit" style="font-size:13px;float:right;background-color:rgba(120,172,255,.1)" class="button">SIGN UP</button>
 </form>
+
+
+
 
 
     
 </div>
 <div style="margin-left: 40px; text-align: center">
-<h1 class="redText" style="top: 0px; font-size:30px;margin-top:75px;margin-bottom:20px;text-align:left">unlock the power of big data with</h1>
-<h1 class="tealText" style="top: 0px;margin-top:1px;color:white;text-align: left">THE <span style="color:rgb(85,179,175)">NEXT GENERATION</span> OF INVESTMENT ANALYSIS TOOLS</h1>
-</div>
-</div>
-<br style="height:10px"></br>
-<div style="border-top-style: solid; color:gray;border-top-width:1px">
-<h1 class="tealText snap-point" style="margin-left: 40px;margin-top:20px;color:white"><a name="altData"></a>ALTERNATIVE DATA</h1>
-<img src="static/images/sourceLogos.png" style="margin-left:auto; margin-right:auto;display:block;height:400px"></img>
-<div style="text-align:right; margin-right:40px">
-<h1 class="tealText" style="font-size:20px;margin-left: 40px;color:white;margin-bottom:0px">WE SIFT THROUGH BILLIONS OF DATA POINTS TO CREATE</h1>
-<h1 class="tealText" style="margin-left: 40px;margin-top:5px;margin-bottom:0px">DOZENS OF ACTIONABLE METRICS</h1>
-</div>
-</div>
-<br style="height:10px"></br>
-<div style="border-top-style: solid; color:gray;border-top-width:1px">
-<a name="consultation"></a><h1 class="tealText snap-point" style="text-align:right; margin-right: 40px;margin-top:20px;color:white"><a name="consulting"></a>CONSULTING</h1>
-  <h1 class="tealText" style="color:white">Advanced Predictive Modeling</h1>  
-<h1 class="tealText" style="color:white">Company and Industry Specific Metrics</h1>  
-  <h1 class="tealText" style="color:white">Customized Alternative Data Reports</h1>
-<div style="text-align:left; margin-right:40px">
-<h1 class="tealText" style="margin-left: 0px;margin-top:110px;text-align:right;float: right;">PERSONALIZED AND PROPRIETARY DATA ANALYTICS</h1>
-<a href="mailto:james@quiverquant.com"><button class="button" style="margin-bottom:40px;float: right" href="mailto:james@quiverquant.com">Schedule a Consultation</button>
-</a>
+<h1 class="redText" style="top: 0px; font-size:30px;margin-top:50px;margin-bottom:20px;text-align:left;color:white">make better investment decisions with our</h1>
+<h1 class="tealText" style="top: 0px;margin-top:1px;margin-bottom:0px;color:#D33F49;text-align: left">FREE, CUTTING-EDGE ALTERNATIVE DATA DASHBOARD</h1>
 </div>
 </div>
 
+
+<div style="text-align:center;margin-top:65px;background-color:#17BEBB;height:180px" class="shadowDiv">
+<h2 class="tealText" style="font-size:20px;letter-spacing:1px;font-weight:normal;margin-bottom:40px;top:20px;color:white;font-family:avenir next">FEATURED ON</h2>
+<a href="https://www.bloomberg.com/opinion/articles/2020-02-27/steven-seagal-s-crypto-blessing-was-bought"><img src="/static/images/moneyStuff.png" style="height:85px;display:block;margin-left:auto;margin-right:auto"></img></a>
+</div>
+<div style="margin-top:85px;margin-left:0px;margin-right:80px" class="">
+<!-- <h1 class="tealText snap-point" style="top:10px;margin-left: 40px;margin-top:50px;color:white"><a name="altData"></a>ALTERNATIVE DATA</h1> -->
+<div style="text-align:left">
+  <h1 class="tealText" style="margin-top:40px;font-size:20px;margin-left: 40px;color:white;margin-bottom:0px">WE SIFT THROUGH BILLIONS OF DATA POINTS TO CREATE</h1>
+  <h1 class="tealText" style="margin-left: 40px;margin-top:5px;margin-bottom:0px">DOZENS OF ACTIONABLE METRICS</h1>
+  </div>
+</div>
+<div style="padding-top:40px;height:500px">
+<img src="/static/images/glassdoor-mockup.png" style="width:30%;margin-left:40px;float:left;height:auto"></img>
+<img src="/static/images/sourceLogos2.png" style="width:50%;float:right;margin-left:auto; margin-right:30px;margin-top:10px;height:auto;padding-bottom:0px"></img>
+</div>
+
+<div style="text-align:left;padding-left:40px;margin-top:15px;background-color:rgb(233,86,148);height:130px" class="shadowDiv">
+<h2 class="tealText" style="font-size:20px;letter-spacing:1px;font-weight:normal;margin-bottom:0px;top:35px;color:white;font-weight:bold;font-family:avenir next">10-Ks and price charts are being dissected by millions of traders, making it difficult to find unique insights</h2>
+<h1 class="tealText" style="font-size:25px;letter-spacing:2px;top:25px;font-weight:bold;color:#00171F;font-family:avenir next">TAP INTO THE POWER OF BIG DATA & GAIN AN EDGE OVER THE MARKET</h2>
+</div>
+
+<div style="padding-left:40px;padding-right:40px;margin-top:40px">
+<img src="/static/images/financial_data_svg.svg"  style="width:45%;float:left">
+<img src="/static/images/blue_chart_svg.svg"  style="margin-left:10%;margin-top:85px;width:35%">
+<h1 class="tealText" style="margin-top:100px;text-align:left;color:rgb(233,78,148);font-weight:700;letter-spacing:2px;font-family:avenir next;padding-right:60px;padding-left:0px;margin-bottom:0px"><span style="color:white">WE BUILD NEXT-GENERATION INVESTMENT RESEARCH TOOLS TO HELP OVER 90,000 USERS</span> TRADE SMARTER</h1>
+</div>
+
+
+
+<div align="center" style="padding-left:40px;padding-right:40px;margin-top:40px;background-color:#00171F">
+<h1 class="tealText" style="padding-top:50px;font-size:28px;text-align:left;color:white;font-weight:600;letter-spacing:2px;font-family:avenir next;padding-right:60px;padding-left:0px;margin-bottom:0px">SAMPLE DATASET: <span style="color:#40c4ff">COVID-19 CLINICAL TRIALS</span></h1>
+<div style="margin-top:60px;margin-left:auto;margin-right:auto;height:85%;width:100%;padding-bottom:30px">
+{{graph|safe}}
+</div>
+<div align="center">
+<h1 class="tealText button" style="background-color:rgba(120,172,255,.2);padding-top:30px;padding-bottom:10px;font-size:21px;font-weight:600;letter-spacing:2px;font-family:avenir next;padding-right:35px;padding-left:35px;margin-bottom:200px;width:auto"><a href="/register" style="color:white">SIGN UP TO VIEW MORE DATA</a></h1>
+</div>
+</div>
+
+<footer style="height:80px;background-color:rgb(50,50,61);padding-top:20px">
+<img src="/static/images/smallLogo.png"  class = "center flex-item" style="height:43px;margin-top:-3px;max-height:100%;max-width: 75%;float:left"></img>
+<h1 style="float:left;margin-top:12px;margin-left:45px;font-size:15px;"><a style="color:white" href="mailto:james@quiverquant.com?subject=Contact Us">CONTACT</a></h1>
+<h1 style="float:left;margin-top:12px;margin-left:45px;font-size:15px;"><a style="color:white" href="/aboutus">ABOUT US</a></h1>
+<h1 style="float:left;margin-top:12px;margin-left:45px;font-size:15px;"><a style="color:white" href="/privacypolicy">PRIVACY POLICY</a></h1>
+
+</footer>
 </div>
 </html>
+
+
+<script type="text/javascript">
+if(screen.width <= 699) {
+document.location = "https://www.quiverquant.com/mobile";
+}
+</script>
